[package]
name = "fastladder-pixiv"
version = "0.1.4"
authors = ["Kohei Suzuki <eagletmt@gmail.com>"]

[dependencies]
chrono = "0.3"
clap = "2.23"
env_logger = "0.4"
hyper = "0.10"
hyper-rustls = "0.3"
lazy_static = "0.2"
log = "0.3"
regex = "0.2"
select = "0.4"
serde = "0.9"
serde_json = "0.9"
url = "1.4"
