[package]
name = "fastladder-pixiv"
version = "0.2.1"
authors = ["Kohei Suzuki <eagletmt@gmail.com>"]

[dependencies]
chrono = "0.3"
clap = "2.24"
env_logger = "0.4"
hyper = "0.10"
hyper-rustls = "0.6"
lazy_static = "0.2"
log = "0.3"
regex = "0.2"
select = "0.4"
serde = "1.0"
serde_json = "1.0"
url = "1.4"
