[package]
name = "fastladder-pixiv"
version = "0.3.0"
authors = ["Kohei Suzuki <eagletmt@gmail.com>"]

[dependencies]
chrono = "0.4"
clap = "2.24"
env_logger = "0.4"
reqwest = "0.8"
lazy_static = "1.0"
log = "0.4"
regex = "0.2"
select = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
url = "1.4"
